--- a/css/principal.css
+++ b/css/principal.css
@@ -384,6 +384,78 @@ footer ul.menu h2,li#subtitulo{
         width: 5vw;
     }
 }
+
+/**loader**/
+.loader_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    background-color: #fff;
+    width: 100vw;
+    height: 100vh;
+    z-index: 999;
+}
+.loader {
+    width: 20vh;
+    height: 20vh;
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    border: 3px solid;
+    border-color: #E0AFFF #E0AFFF transparent transparent;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+.loader::after,
+.loader::before {
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    border: 3px solid;
+    border-color: transparent transparent #4639ff #392cfa;
+    width: 15vh;
+    height: 15vh;
+    border-radius: 50%;
+    box-sizing: border-box;
+    animation: rotationBack 0.5s linear infinite;
+    transform-origin: center center;
+}
+.loader::before {
+    width: 10vh;
+    height: 10vh;
+    border-color: #131313 #131313 transparent transparent;
+    animation: rotation 1.5s linear infinite;
+}
+body.dark .loader_container{
+    background: #131313;
+}
+body.dark .loader::before{
+    border-color: #fff #fff transparent transparent;
+}
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+@keyframes rotationBack {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(-360deg);
+    }
+}
 /**Color barra scroll chrome**/
 ::-webkit-scrollbar{
     background-color: var(--colorNegro);
